# workTest

./: OBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOB
c_coding/: hello  hello.c  test  test.c  test1  test1.c
c_coding/2018/: print_buf.c
c_coding/callback/: callback  damontest.c  main.c  readme  testdamon
c_coding/daemon/: daemon  daemon.c  init.c
c_coding/encryption/: file.des3  my3des.c  new3des  new3des.c
c_coding/getopt/: getopt  getopt.c
c_coding/ipv6/: .eui64.c.swp  eui64  eui64.c
c_coding/linkList/: doubleLinkList.c  link  linkList.c  readme  singleCircularLinkList.c  singlelist
c_coding/netlink/: readme.txt
c_coding/struct/: main.c
c_coding/test/: .gitignore  c_func_test.c  ctest  digui.c  digui_test  ld_script.txt  sprintf  sprintf.c  sscanf  ssscanf-test.c  strchar_  strchar_.c  strtobin  strtobin.c  test.c
c_coding/uloop/: readme
ieee1905/: readme
make/: Makefile  inc.mk  readme
script/: Readme  cmtgit.sh  config.txt  restart_dhcp6d.sh  signal_test.sh  test.sh  trap_test.sh  update.sh
script/lock_shell/: lock.sh
services/p-u-m-a/: Readme  debug_log1.patch  ipv6.init  profptd.init  proftpd.init_1013  proftpd.init_new  samba.init
services/test/: daemon  (+7 more)
wireless/: ifconfig_info_after_wag.txt  ifconfig_info_org.txt  network_ilq_config  pppppp.pcap  uci_gw1.sh  uci_gw2.sh  uci_wag.sh  wireless_ilq_config
wireless/Test_env/spectrumWiFi_Wag_env/spectrum_phase3_delivery/haserl-0.9.29/src/: Makefile.am  h_lua.h
wireless/Test_env/spectrumWiFi_Wag_env/spectrum_phase3_delivery/haserl-0.9.29/src/.deps/: rfc2388.Po  sliding_buffer.Po
(+1093 files in other folders)
